// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AbapServiceProvider fetchValueListReferenceServices should log if metadata loading fails 1`] = `
Array [
  Object {
    "data": "metadata",
    "path": "/sap/opu/odata/srv_f4/two",
    "target": "target",
    "type": "value-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should not crash if promise rejects 1`] = `
Array [
  Object {
    "data": "metadata",
    "path": "/sap/opu/odata/srv_f4/two",
    "target": "target",
    "type": "value-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should return code list data 1`] = `
Array [
  Object {
    "data": "metadata",
    "path": "/sap/opu/odata/srv_f4",
    "type": "code-list",
  },
]
`;

exports[`AbapServiceProvider fetchValueListReferenceServices should return value list data 1`] = `
Array [
  Object {
    "data": "metadata",
    "path": "/sap/opu/odata/srv_f4",
    "target": "target",
    "type": "value-list",
  },
]
`;
